# CS008

./: README.md
AutoCorrect-ish/: CMakeLists.txt  FileReader.cpp  Word.h  WordSuggester.cpp
AutoCorrect-ish/Tools/History/: HistoryNode.h
AutoCorrect-ish/Typing/: MultiText.cpp  MultiText.h
AutoCorrect-ish/Typing/TextInput/: TextBox.cpp  TextInput.cpp
BinaryTree/: A.cpp  A.h  CMakeLists.txt  Node.h  Tree.cpp  Tree.h  main.cpp
BouncingBall/: Ball.cpp  BouncingObject.cpp  main.cpp
CH10ProgrammingProjects/: CMakeLists.txt  library.h
CH10ProgrammingProjects/PP_1/: CMakeLists.txt  ExpressionTree.cpp  ExpressionTree.h  Node.h  main.cpp
CH10ProgrammingProjects/PP_8/: BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  Node.h  functions.cpp  functions.h  main.cpp
CS8_Spring23_Quiz1/: CMakeLists.txt  Index.cpp  Index.h  functions.cpp  functions.h  main.cpp  vector.cpp  vector.h
Calculator/: Button.h  ButtonColor.cpp  ButtonColor.h  CMakeLists.txt  Calculator.cpp  Calculator.h  RPN.cpp
Calculator/SFML_tools/: Application.cpp  Application.h  Fonts.cpp  FontsEnum.h  MouseEvents.cpp
CookieJar/: CMakeLists.txt  Cookie.h  CookieFlavorEnums.h  Jar.cpp  Jar.h  main.cpp  readme.txt
DropShadow/: CMakeLists.txt  DropShadow.cpp  DropShadow.h
Heap/: CMakeLists.txt  Heap.cpp
HeapsPQueue/: CMakeLists.txt  Heap.cpp  Heap.h  Node.h  main.cpp
SFMLTemplate/: CMakeLists.txt  main.cpp
SFML_Projects/AutoCorrect-ish/: FileReader.h  Word.cpp  WordSuggester.h  WordSuggestion.cpp  WordSuggestion.h  main.cpp
SFML_Projects/AutoCorrect-ish/Heap/: Heap.cpp  Heap.h
SFML_Projects/AutoCorrect-ish/Typing/TextInput/: TextBox.h  TextInput.h
SFML_Projects/BouncingBall/: BouncingObject.h  CMakeLists.txt
SFML_Projects/Calculator/: Button.cpp  Helper.cpp  Helper.h  RPN.cpp  RPN.h  Screen.cpp  Screen.h  main.cpp
SFML_Projects/Calculator/SFML_tools/: Application.h  MouseEvents.cpp  MouseEvents.h  cmakelib.txt
SFML_Projects/DropShadow/: DropShadow.cpp  main.cpp
SFML_Projects/FileTree/: CMakeLists.txt  File.cpp  File.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  main.cpp
SFML_Projects/FileTree/SFML_Resources/Components/TextInput/: Cursor.cpp  TextBox.h
SFML_Projects/FileTree/SFML_Resources/Components/Typing/: Typing.cpp
SFML_Projects/FileTree/SFML_Resources/Tools/App/: AppComponent.h
SFML_Projects/SFMLTemplate/: main.cpp
SFML_Projects/SFMLTemplate copy/: main.cpp
SFML_Projects/SFML_Resources/: CMakeLists.txt
SFML_Projects/SFML_Resources/Tools/: Fonts.cpp
SFML_Projects/TextInput/: TextBox.cpp  TextInput.h
SFML_Projects/TextInput/Tools/App/: AppComponent.h
SFML_Projects/Typing/: CMakeLists.txt  main.cpp
SFML_Projects/Typing/MultiText/: Letter.h  MultiText.cpp  MultiText.h
SFML_TextInput/: CMakeLists.txt  Cursor.cpp  Cursor.h  TextBox.cpp  TextBox.h  TextInput.cpp  TextInput.h  main.cpp  project.cpp  project.h
SFML_TextInput/Tools/App/: Application.cpp  Application.h
SFML_TextInput/Tools/Helpers/: KeyboardShortcuts.cpp  Position.cpp
SFML_TextInput/Tools/History/: Snapshot.cpp  Snapshot.h
SFML_TextInput/Typing/: Letter.h  MultiText.cpp  MultiText.h  Typing.cpp
SFML_Typing/: Typing.h
SFML_Typing/SFMLTools/: Position.cpp  Position.h
TemplatedLinkedListProjects/: CMakeLists.txt
TemplatedLinkedListProjects/LinkedList/: LinkedList.cpp  LinkedList.h  Node.h  linkedListSampleRun.txt  linkedlistTester.cpp
TemplatedLinkedListProjects/Queue/: Queue.cpp  Queue.h  queueSampleRun.txt  queueTester.cpp
TemplatedLinkedListProjects/Stack/: Stack.cpp  Stack.h  stackSampleRun.txt  stackTester.cpp
TypingInSFML/: Typing.cpp
TypingInSFML/MultiText/: Letter.cpp
review/: Accuracy.cpp  Accuracy.h  CMakeLists.txt  Hangman.cpp  Hangman.h  NoWordException.cpp  NoWordException.h  Tests.cpp  Tests.h  UserInput.cpp  UserInput.h  Visuals.cpp  Visuals.h  Word.cpp  Word.h  Wordbank.cpp  Wordbank.h  main.cpp  words.txt
stacksandqueuequiz/: CMakeLists.txt  Quiz.cpp  Quiz.h  main.cpp
test/: main.cpp
